# iplist-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  __main__.py  app.py  bot.py  config.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  state.py
core/: __init__.py  config.py  exceptions.py  logging.py
docs/: lk-bot.md
handlers/: __init__.py  admin_payment.py  admin_reminder.py  base.py  common.py  domain.py  lk.py  menu.py  telegram.py  ui.py  webhook.py
models/: __init__.py  pending.py
services/: __init__.py  collector.py  dns.py  gemini.py  github.py  scanner.py  search.py
services/ai/: __init__.py  classifier.py  client.py  resolver.py
services/github/: __init__.py  client.py  schemas.py
state/: __init__.py  builds.py
tests/: conftest.py  test_admin_payment.py  test_admin_reminder.py  test_config.py  test_handlers.py  test_models.py  test_ui.py
tests/test_services/: test_dns.py  test_gemini.py  test_github.py
webhooks/: __init__.py  github.py  server.py
