[project]
name = "iplist-bot"
version = "1.0.0"
description = "Telegram bot for automating site additions to iplist GitHub repository"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "dnspython>=2.4.0",
    "aiohttp>=3.9.0",
    "duckduckgo-search>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
